# blackjack

./: .gitignore  Blackjack.tscn  Card.tscn  CardFlyIn.tscn  Cargo.toml  Hand.tscn  TODO.org  blackjack.gdns  blackjack_lib.tres  gui.gdns  project.godot
addons/atlas_importer3/: importer_gui.tscn
blackjack/: Cargo.toml
blackjack/src/: deck.rs  game.rs  hand.rs  lib.rs  main.old  main.rs
godot-blackjack/: Cargo.toml
godot-blackjack/src/: lib.rs
images/: playingCardBacks.cardBack_blue1.atlastex  playingCardBacks.cardBack_blue2.atlastex  playingCardBacks.cardBack_blue3.atlastex  playingCardBacks.cardBack_blue4.atlastex  playingCardBacks.cardBack_blue5.atlastex  playingCardBacks.cardBack_green1.atlastex  playingCardBacks.cardBack_green2.atlastex  playingCardBacks.cardBack_green3.atlastex  playingCardBacks.cardBack_green4.atlastex  playingCardBacks.cardBack_green5.atlastex  playingCardBacks.cardBack_red1.atlastex  playingCardBacks.cardBack_red2.atlastex  playingCardBacks.cardBack_red3.atlastex  playingCardBacks.cardBack_red4.atlastex  playingCardBacks.cardBack_red5.atlastex  playingCardBacks.png.import  playingCards 08-00-18-153.png.import
src/: deck.rs  game.rs  hand.rs  lib.rs  main.rs
