[package]
name = "blackjack"
version = "0.1.0"
authors = ["Eric Smith <paytonrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
rand = "0.7.3"
strum = "0.18.0"
strum_macros = "0.18.0"
gdnative = "0.9.0-preview.0"

[lib]
crate-type = ["cdylib"]
